<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="game_over">Game Over</string>
    <string name="dash">--</string>
    <string name="try_again_test">try again test</string>
    <string name="info">Info</string>
    <string name="what_color_is_android_mascot">What color is Android mascot</string>
    <string name="blue">blue</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="submit">submit</string>
    <string name="start_game">Start Game</string>
    <string name="start_play">Start Play</string>
    <string name="congrtulations">Congrtulations</string>
    <string name="congratulations">congratulations</string>
    <string name="share_text">%1$d incorrect answer , and  %2$d correct answer</string>
</resources>