<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_margin="16dp">


       <ImageView
           android:layout_width="match_parent"
           android:layout_height="190dp"
           android:layout_gravity="center"
           android:src="@drawable/game_over"
           android:layout_marginBottom="16dp"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/game_over"/>
       <TextView
           android:id="@+id/total_score"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/dash"/>
       <TextView
           android:id="@+id/wrong_answer"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/dash"/>
       <Button
           android:id="@+id/try_again_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_margin="16dp"
           android:text="@string/try_again_test"/>
       
   </LinearLayout>
</layout>